# open-dis-rust

./: .gitignore  404.html  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md  acquiring.html  get-in-touch.html  index.html  installation.html  print.html  searcher-09f2665d.js  searcher-c2a407aa.js  searchindex-1f0626bf.js  searchindex-43c8a21a.js  searchindex-a964d9a2.js  searchindex.js  searchindex.json  toc-1c807ce0.js  toc-1db8e82e.js  toc-8c26709b.js  toc-d54e0eb4.js  toc.html  toc.js
.github/: FUNDING.yml  pull_request_template.md  stale.yml
.github/ISSUE_TEMPLATE/: 2-bug-report.yml  3-feature-request.yml  4-docs-issue.yml
.github/workflows/: ci.yml  gh-page-unstable.yml  gh-page.yml  rust-clippy.yml  rust.yml
book/: CNAME  book.toml
book/src/: README.md  SUMMARY.md  acquiring.md  get-in-touch.md
book/theme/: index.hbs
examples/: radio_processing_client.rs  radio_processing_server.rs  udp_client.rs  udp_server.rs
guides/: creating-a-pdu.html  getting-started.html  receiving-pdus.html  sending-pdus.html  setting-up-udp.html
src/: README.md  distributed_emissions.rs  entity_information.rs  entity_management.rs  information_operations.rs  lib.rs  live_entity_information.rs  logistics.rs  minefield.rs  pdu_macro.rs  radio_communications.rs  simulation_management.rs  simulation_management_with_reliability.rs  synthetic_environment.rs  warfare.rs
src/common/: angular_velocity_vector.rs  clock_time.rs  constants.rs  datum_records.rs  dis_error.rs  entity_coordinate_vector.rs  entity_id.rs  entity_type.rs  enums.rs  euler_angles.rs  event_id.rs  generic_header.rs  linear_acceleration.rs  linear_velocity.rs  live_entity_pdu_header.rs  mod.rs  pdu.rs  pdu_body.rs  pdu_header.rs  serialized_length.rs  simulation_address.rs  simulation_id.rs  vector3_double.rs  vector3_float.rs  velocity_vector.rs  world_coordinate.rs
src/dis6/: data_query_pdu.rs  entity_id.rs  mod.rs  pdu.rs  simulation_management_family_pdu.rs
src/distributed_emissions/: acoustic_beam_data.rs  acoustic_beam_fundamental_parameter.rs  acoustic_emitter_system.rs  acoustic_emitter_system_data.rs  apa_data.rs  designator_pdu.rs  electromagnetic_emission_beam_data.rs  electromagnetic_emission_system_data.rs  electromagnetic_emissions_pdu.rs  emitter_system.rs  fundamental_parameter_data.rs  iff_pdu.rs  mod.rs  propulsion_system_data.rs  shaft_rpms.rs  supplemental_emission_pdu.rs  track_jam_target.rs  underwater_acoustic_pdu.rs  vectoring_nozzle_system_data.rs
src/entity_information/: attribute_pdu.rs  collision_elastic_pdu.rs  (+10 more)
tests/: integration_test.rs
theme/: catppuccin.css
(+261 files in other folders)
