[package]
name = "open-dis-rust"
version = "0.1.1"
authors = ["Cameron Howell <jango.djarin@proton.me>"]
description = "A Rust implementation of the IEEE 1278.1-2012 DIS Standard."
edition = "2021"
license = "BSD-2-Clause"
readme = "README.md"
repository = "https://github.com/crhowell3/open-dis-rust"
keywords = ["DIS", "IEEE", "Simulation"]
rust-version = "1.82"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.5.0"
bytes = "1.8.0"
chrono = "0.4.31"
num-derive = "0.4.1"
num-traits = "0.2.17"
serde = {version = "1.0.188", features = ["derive"]}

[dev-dependencies]
futures = "0.3.31"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
